# cello

./: .gitignore  Makefile.am  README.md  configure.ac
tools/: Makefile.am  Makefile.in  filter.cpp  filter.h  filtervectorscope.cpp  filtervectorscope.h  framebase.cpp  framebase.h  frameformat.cpp  frameformat.h  frameinput.cpp  frameinput.h  frameinputdecklink.cpp  frameinputdecklink.h  frameinputdecklink2.cpp  frameinputdecklink2.h  framemetadata.cpp  framemetadata.h  frameoutput.cpp  frameoutput.h  frameoutputdecklink.cpp  frameoutputdecklink.h  frameoutputdecklink2.cpp  frameoutputdecklink2.h  frameoutputndi.cpp  frameoutputndi.h  framepipe.cpp  framepipe.h  framepipe_burnwriter.cpp  framepipe_burnwriter.h  frameprocessor.cpp  frameprocessor.h  framequeue.cpp  framequeue.h  framesync.cpp  hires-av-debug.h  logger.c  logger.h  osd.c  osd.h  (+6 more)
